# GenericDataStructures

./: .clang_complete  .gitignore  README.md  _config.yml  index.md  meson.build  meson_options.txt  todolist.txt
Grid/: grid-create.md  grid-free-resources.md  grid-free.md  grid-get.md  grid-height.md  grid-init.md  grid-set.md  grid-width.md  index.md
List/: index.md  list-add.md  list-clear.md  list-count.md  list-create.md  list-free-resources.md  list-free.md  list-get.md  list-init-capacity.md  list-init.md  list-insert.md  list-peek.md  list-pop.md  list-remove.md  list-set.md  list-shrink-to-fit.md  list_add.md  list_clear.md  list_count.md  list_create.md  list_free.md  list_peek.md  list_remove.md  list_shrink_to_fit.md
Map/: index.md  map-add.md  map-create.md  map-free.md  map-get-and-remove.md  map-get.md  map-init.md  map-remove.md  map-set.md  map-try-get.md  map_count.md  map_create.md  map_get.md  map_get_and_remove.md  map_init.md  map_remove.md
Queue/: queue-clear.md  queue-count.md  queue-create-capacity.md  queue-create.md  queue-dequeue.md  queue-enqueue.md  queue-free-resources.md  queue-free.md  queue-init-capacity.md  queue-init.md  queue-peek.md  queue_clear.md  queue_count.md  queue_create.md  queue_create_capacity.md  queue_enqueue.md  queue_free.md  queue_free_resources.md  queue_init_capacity.md
RedBlackTree/: index.md  rbtree-free.md  rbtree-get-max.md  rbtree-get-min.md  rbtree-get.md  rbtree-init.md  rbtree-remove-max-node.md  rbtree-remove-max.md  rbtree-remove-min-node.md  rbtree-remove-min.md  rbtree-remove-node.md  rbtree-remove.md  rbtree-root.md  rbtree_add.md  rbtree_count.md  rbtree_free_resources.md  rbtree_get.md  rbtree_get_min.md  rbtree_get_node.md  rbtree_init.md  rbtree_remove.md  rbtree_remove_max.md  rbtree_remove_max_node.md  rbtree_remove_min.md  rbtree_root.md
Set/: index.md  set-add.md  set-contains.md  set-count.md  set-create.md  set-free-resources.md  set-free.md  set-get-and-remove.md  set-get.md  set-init.md  set_contains.md  set_count.md  set_create.md  set_get_and_remove.md
_includes/: footer.html
_layouts/: default.html
_sass/: _bootswatch.scss  _custom.scss  _syntax.scss  _variables.scss
deque/: deque-capacity.md  deque-clear.md  deque-count.md  deque-create-capacity.md  deque-create.md  deque-free-resources.md  deque-free.md  deque-init-capacity.md  deque-init.md  deque-peek-back.md  deque-peek-front.md  deque-pop-back.md  deque-pop-front.md  deque-push-back.md  deque-push-front.md  deque_capacity.md  deque_clear.md  deque_count.md  deque_create.md  deque_create_capacity.md  deque_free.md  deque_free_resources.md  deque_init.md  deque_init_capacity.md  deque_peek_back.md  deque_peek_front.md  deque_pop_back.md  deque_pop_front.md  deque_push_back.md  deque_push_front.md  index.md
docs/: README.md
event/: event-create.md  event-free-resources.md  event-free.md  event-init.md  event-subscribe.md  event-trigger.md  event-unsubscribe.md  event_create.md  event_free.md  event_free_resources.md  event_init.md  event_subscribe.md  event_trigger.md  event_unsubscribe.md  index.md
grid/: grid-clear.md  grid-create.md  grid-free-resources.md  grid-free.md  grid-get.md  grid-height.md  grid-init.md  grid-set.md  grid-width.md  grid_clear.md  grid_create.md  grid_free.md  grid_free_resources.md  grid_get.md  grid_height.md  grid_init.md  grid_set.md  grid_width.md  index.md
include/: generic_alloc.h  generic_deque.h  generic_event.h  generic_grid.h  generic_hash_utils.h  generic_list.h  generic_map.h  generic_observable_collection.h  generic_option.h  generic_pool.h  generic_queue.h  generic_rbtree.h  generic_set.h  generic_trie.h  hash_utils.h  list.h
list/: index.md  list-add.md  list-clear.md  list-count.md  list-create.md  list-free-resources.md  list-free.md  list-get.md  list-init-capacity.md  list-init.md  list-insert.md  list-peek.md  list-pop.md  list-remove.md  list-set.md  list-shrink-to-fit.md  list_free_resources.md  list_get.md  list_init.md  list_init_capacity.md  list_insert.md  list_pop.md  list_set.md
map/: index.md  map-add.md  map-allocated.md  map-capacity.md  map-clear.md  map-count.md  map-create.md  map-free-resources.md  map-free.md  map-get-and-remove.md  map-get.md  map-init.md  map-remove.md  map-set.md  map-try-get.md  map_add.md  map_allocated.md  map_capacity.md  map_clear.md  map_count.md  map_free.md  map_free_resources.md  map_set.md  map_try_get.md
option/: index.md  option-default.md  option-has-value.md  option-make.md  option-value-or-default.md  option-value.md  option_default.md  option_has_value.md  option_make.md  option_value.md  option_value_or_default.md
pool/: index.md  pool-create.md  pool-free-resources.md  pool-free.md  pool-get.md  pool-init.md  pool-release.md  pool_create.md  pool_free.md  pool_free_resources.md  (+3 more)
tests/: deque_test.c  event_test.c  grid_test.c  list_test.c  map_test.c  meson.build  option_test.c  pool_test.c  queue_test.c  rb_tree_test.c  set_test.c  trie_test.c
(+265 files in other folders)
